[package]
name = "catr"
authors = ["Minh Tran <minh@minhtrannhat.com>"]
version = "0.1.0"
edition = "2021"
description = "Rust rewrite of cat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["cargo", "help"] }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
rand = "0.8.5"
rstest = "0.18.1"
